<resources>
    <string name="app_name">Proyecto</string>
    <string name="logo">Logo</string>
    <string name="avatar">Avatar</string>
    <string name="contacts">Contactos</string>
    <string name="addContact">Agregar contacto</string>
    <string name="foto">tomar foto</string>
    <string name="nameFoto">guardar como...</string>
    <string name="guardarFoto">abrir galeria</string>
    <string name="nombre">Nombre</string>
    <string name="cel">Celular</string>
    <string name="direccion">Direccion</string>
    <string name="cumple">Cumpleaños</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="dia">dia</string>
    <string name="mes">mes</string>

    <string-array name="mesList">
        <item>enero</item>
        <item>febrero</item>
        <item>marzo</item>
        <item>abril</item>
        <item>mayo</item>
        <item>junio</item>
        <item>julio</item>
        <item>agosto</item>
        <item>septiembre</item>
        <item>octubre</item>
        <item>noviembre</item>
        <item>diciembre</item>
    </string-array>

    <string-array name="diaList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>
