<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="116dp"
        android:layout_height="105dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toTopOf="@+id/btnFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edtCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/cel"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/edtDireccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <Spinner
        android:id="@+id/spDia"
        android:layout_width="76dp"
        android:layout_height="32dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="11dp"
        android:entries="@array/diaList"
        android:prompt="@string/dia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="21dp"
        android:text="@string/cumple"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDireccion" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtCelular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCelular" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="14dp"
        android:background="#00E6E2E2"
        android:cursorVisible="true"
        android:onClick="foto"
        android:text="@string/foto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/edtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/btnGuardar2"
        android:layout_width="66dp"
        android:layout_height="35dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="21dp"
        android:background="#00E2DADA"
        android:onClick="editar"
        android:text="@string/editar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscar"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDia" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="66dp"
        android:layout_height="35dp"
        android:layout_marginStart="129dp"
        android:layout_marginBottom="99dp"
        android:background="#00E6E2E2"
        android:cursorVisible="true"
        android:onClick="buscar"
        android:text="@string/buscar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar2" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="148dp"
        android:background="#00E2DADA"
        android:onClick="alta"
        android:text="@string/guardar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar2"
        app:layout_constraintTop_toBottomOf="@+id/spMes" />

    <Button
        android:id="@+id/btnGuardar3"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="99dp"
        android:background="#00E2DADA"
        android:onClick="eliminar"
        android:text="@string/eliminar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

    <Spinner
        android:id="@+id/spMes"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="120dp"
        android:entries="@array/mesList"
        android:prompt="@string/mes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>